Clean ambiguous expressions. Add ETA for current section.

--- a/reader/index.html
+++ b/reader/index.html
@@ -23,7 +23,7 @@
 				<span class="info-title">Progress: </span> <span v-cloak class="info-value" id="ps-read">{{pagesRead}}</span>
 				<span class="info-title">Avg. page time: </span> <span v-cloak class="info-value" id="avg-time">{{averageTime}}</span>
 				<span class="info-title">Est. time remaining: </span> <span v-cloak class="info-value" id="est-time">{{estimatedTime}}</span>
-				<span class="info-title">ETA: </span> <span v-cloak class="info-value" id="eta">{{eta}}</span>
+				<span class="info-title">ETA: </span> <span v-cloak class="info-value" id="eta">{{etaString}}</span>
 			</p>
 		</div>
 		<div v-cloak id="control-panel">
